tests/invalidTest/test_7.q
# EXPECT type cannot be converted
def uint16 test(){

  sint16 var4 = 12        #define & int var
  sint8 var5 = var4
  return 0
}

